--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anchor",
+  "name": "@maxts/anchor",
   "version": "1.4.1",
   "description": "High-level validation library for Node.js (used in Waterline)",
   "homepage": "https://sailsjs.com",
